--- a/html-dumps/avatar.html
+++ b/html-dumps/avatar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1MillionManWorship2025</title>
+    <title>1MillionManWorhsip2025</title>
     <link rel="stylesheet" href="styles/avatar.css">
 </head>
 <body>
@@ -17,10 +17,9 @@
 
     <input type="file" id="imageUpload" accept="image/*">
     <button id="downloadBtn">Download Avatar</button>
-
-    <button id="downloadBtn">Download Avatar</button>
+    <button id="downloadBtn">Share Avatar</button>
 </div>
 
-<script src="js/1mmw-avatar-2025.js"></script>
+<script src="js/avatar-with-preview.js"></script>
 </body>
 </html>
