--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1MillionManWorship2025</title>
     <link rel="stylesheet" href="styles/avatar.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" />
+
 </head>
-<body>
+<body> 
 
 <div class="container">
     <h2>Create Your 1 Million Man Worship Avatar</h2>
@@ -16,10 +19,16 @@
     </div>
 
     <input type="file" id="imageUpload" accept="image/*">
-    <button id="downloadBtn">Download Avatar</button>
+    <button id="downloadBtn">Download Avatar</button> 
+
     
+
 </div>
 
 <script src="js/1mmw-avatar-2025.js"></script>
+<script src="js/1mmw-avatar-cropper.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
+
 </body>
 </html>
