--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body> 
 
 <div class="container">
-    <h2>Create Your 1 Million Man Worship Avatar</h2>
+    <h2>Create Your One Million Man Worship Avatar</h2>
 
     <div class="canvas-wrapper">
         <canvas id="avatarCanvas"></canvas>
