--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" />
 
+    <link rel="icon" type="image/png" href="assets/logo/1mmw_logo1.png">
+
+
 </head>
 <body> 
 
@@ -28,6 +31,39 @@
 <script src="js/1mmw-avatar-cropper.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
+
+
+
+
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+<script>
+  // Replace with your Firebase project config
+  const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+    projectId: "YOUR_PROJECT_ID",
+    storageBucket: "YOUR_PROJECT_ID.appspot.com",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  // Initialize stats document if it doesn't exist
+  db.collection("stats").doc("main").get().then(doc => {
+    if (!doc.exists) {
+      db.collection("stats").doc("main").set({
+        siteVisits: 0,
+        avatarCreations: 0
+      });
+    }
+  });
+</script>
+
 
 </body>
 </html>
