mobile touch updated

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 </head>
 <body> 
-
-<div class="container">
+<section>
+  <div class="container">
     <h2>Create Your One Million Man Worship Avatar</h2>
 
     <div class="canvas-wrapper">
@@ -23,12 +23,16 @@
 
     <input type="file" id="imageUpload" accept="image/*">
     <button id="downloadBtn">Download Avatar</button>  
-</div>
+
+  </div>
+</section>
+<section>
+    <div class="download-share">DOWNLOAD AND SHARE WITH FRIENDS AND LOVED ONES</div>
+</section>
 
 
 
-<script src="js/1mmw-avatar-2025.js"></script>
-<script src="js/1mmw-avatar-cropper.js"></script>
+<script src="js/1mmw-avatar2-2025.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
 
