--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
 
   </div>
 </section>
+
 <section>
-    <div class="download-share">DOWNLOAD AND SHARE WITH FRIENDS AND LOVED ONES</div>
+    <div class="glow-text">DOWNLOAD AND SHARE WITH FRIENDS AND LOVED ONES</div>
+
+    <button id="shareBtn">Share</button>
+
+
 </section>
 
 
 
 <script src="js/1mmw-avatar2-2025.js"></script>
+<script src="js/share-button.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
 
