--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <section>
     <div class="glow-text">DOWNLOAD AND SHARE WITH FRIENDS AND LOVED ONES</div>
 
-    <button id="shareBtn">Share</button>
+    <button id="shareBtn" class="share-btn">Share</button>
 
 
 </section>
